refactoring index with include,init section card-project

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,3 +1,5 @@
 extend ./component/index-template.pug
 block content
     include ./component/main.pug
+    include ./component/skill.pug
+    include ./component/project.pug
