--- a/src/scss/base/_size.scss
+++ b/src/scss/base/_size.scss
@@ -17,3 +17,7 @@ $spacing-big: 48px;
 
 $icon-size: 24px;
 $icon-container: 48px;
+
+$card-block-size: 82px;
+$card-inline-size: 125px;
+$card-info-min-inline-size: 150px;
