min a max sizes for cards

--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -10,6 +10,6 @@ mixin card-project(title,image)
 section.section-main.section-project
     h1.section-main-title Projects
     .project-container
-        +card-project('El camisa Perro El camisa Perro', '1')
+        +card-project('Mercado Libre Home', '1')
         +card-project('bla', '1')
         +card-project('yggg yggg', '1')
