--- a/src/scss/base/_size.scss
+++ b/src/scss/base/_size.scss
@@ -21,3 +21,4 @@ $icon-container: 48px;
 $card-block-size: 82px;
 $card-inline-size: 125px;
 $card-info-min-inline-size: 150px;
+$card-info-max-inline-size: 150px;
