--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,5 +1,6 @@
 extend ./component/index-template.pug
 block content
+    include ./component/menu.pug
     include ./component/main.pug
     include ./component/skill.pug
     include ./component/project.pug
