menu maquetation, contact page refactoring

--- a/src/pug/component/menu.pug
+++ b/src/pug/component/menu.pug
@@ -5,12 +5,14 @@
         each section in sections
             li
                 a(href= section.link).menu-link #{section.name}
-    .menu-social
+    .menu-contact
         .about
-            a(href="./about") About
+            a(href="./about.html") About
         .social-media
             .icon
             .icon 
             .icon
         .contact-me
-        
+            span.mail arielestebansoto@gmail.com
+            span.phone +54 9 11 2243 1005
+            span.location Argentina, Buenos Aires, Pilar.
