--- a/src/scss/base/_size.scss
+++ b/src/scss/base/_size.scss
@@ -22,3 +22,5 @@ $card-block-size: 82px;
 $card-inline-size: 125px;
 $card-info-min-inline-size: 150px;
 $card-info-max-inline-size: 150px;
+
+$button-inline-size: 48px;
