--- a/src/html/component/nav.html
+++ b/src/html/component/nav.html
@@ -1,6 +1,6 @@
 
 <header class="nav"> 
-  <div class="nav-icon"><span>a</span></div>
+  <div class="nav-icon"><a href="./index.html"> a</a></div>
   <div class="nav-section"></div>
   <div class="nav-menu"><span>menu</span></div>
 </header>
