--- a/src/pug/component/index-template.pug
+++ b/src/pug/component/index-template.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
     include ./head.pug 
-    body
+    body.body
         include ./nav.pug
         block content
     script(src='./index.js', type='module')
