--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -23,7 +23,8 @@
     align-items: center;
     color: var.$color-font-white;
 }
-.nav-icon span {
+.nav-icon a {
+    @extend %style-none;
     display: flex;
     justify-content: center;
     align-items: center;
