hamburger menu, transition left

--- a/src/html/component/menu.html
+++ b/src/html/component/menu.html
@@ -1,15 +1,26 @@
 
-<div class="menu"> 
-  <div class="menu-list">
-    <ul></ul>
-    <li>Web Dev,Music,Audiovisual,Blog</li>
-    <li>Web Dev,Music,Audiovisual,Blog</li>
-    <li>Web Dev,Music,Audiovisual,Blog</li>
-    <li>Web Dev,Music,Audiovisual,Blog</li>
+<header class="nav"> 
+  <div class="nav-icon"><a href="./index.html"> a</a></div>
+  <div class="nav-section"></div>
+  <div class="nav-menu">
+    <input type="checkbox" name="hamburgermenu"/><span>menu</span><span>close</span>
+    <div class="menu"> 
+      <div class="menu-list">
+        <ul></ul>
+        <li><a class="menu-link" href="./webdev">Web Dev</a></li>
+        <li><a class="menu-link" href="./music">Music</a></li>
+        <li><a class="menu-link" href="./audiovisual">Audiovisual</a></li>
+        <li><a class="menu-link" href="./blog">Blog</a></li>
+      </div>
+      <div class="menu-contact">
+        <div class="about"><a href="./about.html">About</a></div>
+        <div class="social-media">
+          <div class="icon"></div>
+          <div class="icon"> </div>
+          <div class="icon"></div>
+        </div>
+        <div class="contact-me"><span class="mail">arielestebansoto@gmail.com</span><span class="phone">+54 9 11 2243 1005</span><span class="location">Argentina, Buenos Aires, Pilar.</span></div>
+      </div>
+    </div>
   </div>
-  <div class="menu-about-media">
-    <div class="about"><a href="#"> </a></div>
-    <div class="social-media"></div>
-    <div class="contact"> </div>
-  </div>
-</div>
+</header>
