--- a/src/pug/component/index-template.pug
+++ b/src/pug/component/index-template.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
     include ./head.pug 
     body.body
-        include ./nav.pug
+        include ./nav
+        include ./menu 
         block content
     script(src='./index.js', type='module')
