--- a/src/pug/component/nav.pug
+++ b/src/pug/component/nav.pug
@@ -3,4 +3,6 @@ header.nav
         a(href="./index.html")  a
     .nav-section
     .nav-menu
+        input(type="checkbox", name="hamburgermenu", id="checkbox")
         span menu
+        span close
