--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -55,17 +55,17 @@
     opacity: 0;
     cursor: pointer;
 }
+
 .nav-menu span {
     color: var.$color-font-white;
+    transition: opacity 1s ease-in-out;
 }
 .nav-menu span:nth-child(3) {
     opacity: 0;
 }
-/* hamburguermenu */
 .nav-menu input:checked ~ span:nth-child(2) {
     opacity: 0;
 }
-
 .nav-menu input:checked ~ span:nth-child(3) {
     opacity: 1;
 }
