init music page

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -1,4 +1,4 @@
-extend ./index-template.pug
+extend ./component/index-template.pug
 block content
     .section-main.section-about
         h1.section-main-title About
