--- a/src/pug/component/menu.pug
+++ b/src/pug/component/menu.pug
@@ -1,5 +1,5 @@
 
--var sections = [ webDev = {name: 'Web Dev', link: './webdev' }, music = {name: 'Music', link: './music' }, audiovisual = {name: 'Audiovisual', link: './audiovisual'}, blog = {name: 'Blog', link: './blog'} ]
+-var sections = [ webDev = {name: 'Web Dev', link: './webdev' }, music = {name: 'Music', link: './music.html' }, audiovisual = {name: 'Audiovisual', link: './audiovisual.html'}, blog = {name: 'Blog', link: './blog'} ]
 .menu 
     .menu-list
         ul
