--- a/src/scss/base/_size.scss
+++ b/src/scss/base/_size.scss
@@ -24,3 +24,8 @@ $card-info-min-inline-size: 150px;
 $card-info-max-inline-size: 150px;
 
 $button-inline-size: 48px;
+
+$block-size-music-hero: 310px;
+$block-size-card-song: 80px;
+
+$thumbnail-size: 60px;
