--- a/style.css
+++ b/style.css
@@ -438,3 +438,76 @@
 .contact-me span {
   margin-block-end: 24px;
 }
+
+.music {
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+.music-hero {
+  display: grid;
+  grid-template: repeat(7, 1fr)/repeat(5, 1fr);
+  block-size: 310px;
+  inline-size: 100%;
+  background-image: url(../../../img/music/portada.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.music-hero-title {
+  grid-column: 2/5;
+  grid-row: 6/7;
+  place-self: center;
+}
+
+.music-list {
+  padding-block-start: 24px;
+  padding-inline: 32px;
+}
+
+.music-title {
+  display: none;
+}
+
+.card-song {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  column-gap: 32px;
+  inline-size: 100%;
+}
+
+.card-song-thumbnail {
+  block-size: 60px;
+  inline-size: 60px;
+  place-self: center;
+}
+
+.card-song-thumbnail img {
+  min-block-size: 60px;
+  min-inline-size: 60px;
+  inline-size: 100%;
+  block-size: auto;
+  object-fit: cover;
+}
+
+.card-song-title {
+  grid-column: 2/5;
+  place-self: center;
+}
+
+.card-song-play {
+  grid-column: 5/6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  block-size: 48px;
+  inline-size: 48px;
+  place-self: center;
+}
+
+.card-song-play img {
+  inline-size: 24px;
+  block-size: 24px;
+  filter: invert(1);
+}
