--- a/src/pug/component/menu.pug
+++ b/src/pug/component/menu.pug
@@ -1,4 +1,4 @@
--var sections = [ webDev = {name: 'Web Dev', link: './index.html' }, music = {name: 'Music', link: './music.html' }, audiovisual = {name: 'Audiovisual', link: './audiovisual.html'}, blog = {name: 'Blog', link: './blog'} ]
+-var sections = [ webDev = {name: 'Web Dev', link: './index.html' }, music = {name: 'Music', link: './music.html' }, audiovisual = {name: 'Audiovisual', link: './audiovisual.html'}, blog = {name: 'Blog', link: './blog.html'} ]
 .menu 
     .menu-list
         ul
