--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -10,3 +10,9 @@
     padding-block-start: size.$height-nav;
     row-gap: size.$gutter-grid-mobile;
 }
+%section {
+    inline-size: 100%;
+    min-block-size: 100vh;
+    padding-block-start: size.$height-nav;
+    padding-inline: size.$margin-grid-mobile;
+}
