refactoring head tag, check post section rooting

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -1,4 +1,6 @@
 extend ./component/index-template.pug
+block style
+    +head('About')
 block content
     .section-main.section-about
         h1.section-main-title About
