--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,4 +1,6 @@
 extend ./component/index-template.pug
+block style
+    +head
 block content
     include ./component/main.pug
     include ./component/skill.pug
