finish page post and audiovisual quickgalery section

--- a/src/pug/blog.pug
+++ b/src/pug/blog.pug
@@ -1,9 +1,9 @@
 extend ./component/index-template.pug
 mixin blog-entry
     a(href="./blog/post.html").blog-entry
-        h1.entry-title Title 
-        p.entry-extract Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        span.date 1 Ene 2021.
+        h1.blog-title Title 
+        p.blog-extract Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        span.blog-date 1 Ene 2021.
 block style
     +head('Blog')
 block content
