--- a/src/pug/blog/post.pug
+++ b/src/pug/blog/post.pug
@@ -2,3 +2,9 @@ extend ../component/index-template.pug
 block style
     +head('Post', '../style.css')
 block content
+    section.section.section-post 
+        span.post-date 01 Ene 2021
+        h1.post-title Title
+        p.post-extract Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        p.post-text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, labore ut harum voluptatum officia fugit, veritatis ab modi eum consequuntur porro quos repellat optio molestiae explicabo maiores dicta pariatur. Ipsa.
+        p.post-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, ipsum consectetur incidunt assumenda, aliquam et illo eveniet deleniti a nesciunt laboriosam. Dolor obcaecati doloribus, blanditiis aliquam vitae quos cum beatae!
