--- a/src/scss/component/_blog.scss
+++ b/src/scss/component/_blog.scss
@@ -1,10 +1,10 @@
 @use '../base/var';
 .section {
-    @extend %section;   
+    @extend %section;
 }
 .blog-entries {
     inline-size: 100%;
-    block-size: 100%;
+    block-size:  100%;
 }
 .blog-entry {
     @extend %style-none;
@@ -15,14 +15,14 @@
     block-size: var.$height-blog-entry;
     margin-block-end: var.$spacing-medium;
 }
-.entry-title{
+.blog-title{
     @extend %blog-title;
 }
-.entry-extract {
+.blog-extract {
     @extend %blog-extract;
     text-align: center;
 }
-.date {
+.blog-date {
     @extend %blog-date;
     text-align: right;
 }
