--- a/src/scss/component/_menu.scss
+++ b/src/scss/component/_menu.scss
@@ -1,10 +1,10 @@
 @use '../base/var';
 .menu {
-    position: absolute;
+    position: fixed;
     z-index: 50;
 
     transform: translate(0, -100%);
-    transition: transform .5s ease-out;
+    transition: transform .7s ease-in-out;
     
     inline-size: 100vw;
     block-size: 100vh;
