--- a/style.css
+++ b/style.css
@@ -430,10 +430,10 @@
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
   z-index: 50;
   transform: translate(0, -100%);
-  transition: transform 0.5s ease-out;
+  transition: transform 0.7s ease-in-out;
   inline-size: 100vw;
   block-size: 100vh;
   padding-block-start: 72px;
