menu responsive, skill section responsive

--- a/src/pug/component/skill.pug
+++ b/src/pug/component/skill.pug
@@ -1,6 +1,16 @@
 section.section-main.section-skill
     h1.section-main-title Skills
-    p.section-main-text
-        | I'm interesting in the cliente side. Front End is what I'm really into. I like design interfaces. 
-    h2.section-main-subtitle Technologies
-    .skills-container
+    .subsection-skill
+        .subsection-1-skill
+            p.section-main-text
+                | I'm interesting in the cliente side. Front End is what I'm really into. I like design interfaces. 
+        .subsection-2-skill
+            h2.section-main-subtitle Technologies
+            .skill-container
+                .icon
+                .icon
+                .icon
+                .icon
+                .icon
+                .icon
+                
